--- a/src/main/resources/views/pages/admin/prodi/daftar-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/prodi/daftar-permintaan-verifikasi.fxml
@@ -2,15 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="halamanPermintaanVerif" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.PermintaanVerifAllController">
+<?import javafx.scene.layout.BorderPane?>
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DaftarPermintaanVerifikasiController">
     <fx:include source="../../../components/admin/prodi/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
@@ -63,25 +62,14 @@
                </HBox>
             </children>
          </HBox>
-            <TableView fx:id="tableViewBerkasProdi" VBox.vgrow="ALWAYS">
-                <columns>
-               <TableColumn fx:id="numberColumn" editable="false" prefWidth="75.0" text="No" />
-                    <TableColumn fx:id="idColumn" editable="false" prefWidth="90.39996337890625" text="NIM" />
-                    <TableColumn fx:id="nameColumn" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
-                    <TableColumn fx:id="descriptionColumn" editable="false" prefWidth="168.800048828125" sortable="false" text="Keterangan" />
-                    <TableColumn fx:id="dateColumn" editable="false" prefWidth="96.0" text="Tanggal" />
-                    <TableColumn fx:id="actionColumn" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
-                </columns>
-                <opaqueInsets>
-                    <Insets />
-                </opaqueInsets>
+            <BorderPane maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                <center>
+                    <fx:include fx:id="tabelPengajuan" source="../../../components/admin/tabel-pengajuan.fxml" VBox.vgrow="ALWAYS" />
+                </center>
                 <VBox.margin>
                     <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                 </VBox.margin>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-            </TableView>
+            </BorderPane>
         </children>
     </VBox>
 </HBox>
