--- a/src/main/resources/views/components/admin/topbar.fxml
+++ b/src/main/resources/views/components/admin/topbar.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.components.admin.TopbarController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="userProfileImg" fitHeight="150.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../img/foto-steve-jobs.png" />
                </image>
@@ -20,12 +20,12 @@
             </ImageView>
             <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Danin">
+                  <Label fx:id="username" text="Danin">
                      <font>
                         <Font name="Reddit Sans Regular" size="14.0" />
                      </font>
                   </Label>
-                  <Label text="Admin Jurusan">
+                  <Label fx:id="userRole" text="Admin Jurusan">
                      <font>
                         <Font name="Reddit Sans Light" size="12.0" />
                      </font>
