--- a/src/main/resources/views/pages/admin/prodi/detail-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/prodi/detail-permintaan-verifikasi.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DetailPermintaanProdiVerifikasiController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DetailPermintaanProdiVerifikasiController">
    <fx:include source="../../../components/admin/prodi/sidebar.fxml" />
    <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
       <children>
@@ -200,17 +207,17 @@
                                  <Insets bottom="20.0" left="15.0" />
                               </VBox.margin>
                            </Button>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Laporan Distribusi TA" textFill="#7e7e7e">
+                           <Label prefHeight="10.0" prefWidth="251.0" text="Laporan Distribusi Skripsi" textFill="#7e7e7e">
                               <VBox.margin>
                                  <Insets bottom="5.0" left="15.0" right="15.0" />
                               </VBox.margin>
                            </Label>
-                           <TextField fx:id="inputLaporanTA" disable="true" editable="false" layoutX="36.0" layoutY="102.0" styleClass="input-field" text="laporan-distribusi-ta">
+                           <TextField fx:id="inputLaporanSkripsi" disable="true" editable="false" layoutX="36.0" layoutY="102.0" styleClass="input-field" text="laporan-distribusi-ta">
                               <VBox.margin>
                                  <Insets bottom="5.0" left="15.0" right="25.0" />
                               </VBox.margin>
                            </TextField>
-                           <Button fx:id="btnFileLaporanTA" layoutX="36.0" layoutY="130.0" mnemonicParsing="false" onAction="#btnFileLaporanTAOnClicked" text="Buka file">
+                           <Button fx:id="btnFileLaporanTA" layoutX="36.0" layoutY="130.0" mnemonicParsing="false" onAction="#btnFileLaporanSkripsiOnClicked" text="Buka file">
                               <VBox.margin>
                                  <Insets bottom="20.0" left="15.0" />
                               </VBox.margin>
@@ -278,7 +285,7 @@
                                  <Insets top="15.0" />
                               </VBox.margin>
                            </Label>
-                           <TextArea fx:id="textAreaKeterangan" prefHeight="158.0" prefWidth="239.0" promptText="Tambahkan pesan verifikasi">
+                           <TextArea fx:id="keteranganVerifikasi" prefHeight="158.0" prefWidth="239.0" promptText="Tambahkan pesan verifikasi">
                               <VBox.margin>
                                  <Insets bottom="20.0" right="20.0" top="5.0" />
                               </VBox.margin>
@@ -292,7 +299,7 @@
                </HBox>
                <BorderPane prefHeight="67.0" prefWidth="600.0">
                   <right>
-                     <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #052C65;" text="Kirim" textFill="WHITE" BorderPane.alignment="CENTER">
+                     <Button fx:id="btnKirim" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#updateVerification" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #052C65;" text="Kirim" textFill="WHITE" BorderPane.alignment="CENTER">
                         <font>
                            <Font name="Reddit Sans Regular" size="12.0" />
                         </font>
