--- a/src/main/resources/views/pages/admin/jurusan/overlay/overlay-tambah-data-mahasiswa.fxml
+++ b/src/main/resources/views/pages/admin/jurusan/overlay/overlay-tambah-data-mahasiswa.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox fx:id="overlayTambahMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.jurusan.overlay.OverlayTambahDataMahasiswa">
+<VBox fx:id="overlayTambahMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.jurusan.overlay.OverlayTambahDataMahasiswa">
     <children>
         <Label text="Nama Lengkap" />
         <TextField fx:id="inputNama" prefHeight="26.0" prefWidth="502.0" />
@@ -29,9 +25,9 @@
         <Label text="Password" />
         <PasswordField fx:id="inputPassword" prefHeight="26.0" prefWidth="502.0" />
       <Label layoutX="40.0" layoutY="260.0" text="Tahun Masuk" />
-      <PasswordField fx:id="inputTahunMasuk" layoutX="40.0" layoutY="278.0" prefHeight="26.0" prefWidth="502.0" />
+      <TextField fx:id="inputTahunMasuk" layoutX="40.0" layoutY="234.0" prefHeight="26.0" prefWidth="502.0" />
       <Label layoutX="40.0" layoutY="304.0" text="Foto Profil" />
-      <TextField fx:id="inputFotoProfil" layoutX="40.0" layoutY="322.0" prefHeight="26.0" prefWidth="502.0" />
+      <TextField fx:id="inputFotoProfil" disable="true" layoutX="40.0" layoutY="322.0" prefHeight="26.0" prefWidth="502.0" />
       <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
          <font>
             <Font name="Reddit Sans Regular" size="12.0" />
