--- a/src/main/resources/views/pages/admin/jurusan/kelola-admin.fxml
+++ b/src/main/resources/views/pages/admin/jurusan/kelola-admin.fxml
@@ -31,7 +31,7 @@
                   <padding>
                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                   </padding></Button>
-               <TableView fx:id="tableViewAdmin" style="-fx-border-color: #E4EEFF; -fx-border-width: 2px;" stylesheets="@../../../../css/table-view.css">
+               <TableView fx:id="tableViewAdmin" style="-fx-border-color: #E4EEFF; -fx-border-width: 2px;" stylesheets="@../../../../css/table-view.css" VBox.vgrow="ALWAYS">
                  <columns>
                    <TableColumn fx:id="numberColumn" prefWidth="75.0" text="No" />
                      <TableColumn fx:id="adminIDColumn" prefWidth="120.20004272460938" styleClass=".table-header" text="ID" />
@@ -43,6 +43,9 @@
                   <columnResizePolicy>
                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                   </columnResizePolicy>
+                  <VBox.margin>
+                     <Insets bottom="40.0" />
+                  </VBox.margin>
                </TableView>
             </children>
             <VBox.margin>
