--- a/src/main/resources/views/pages/admin/jurusan/overlay/overlay-edit-mahasiswa.fxml
+++ b/src/main/resources/views/pages/admin/jurusan/overlay/overlay-edit-mahasiswa.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.text.Font?>
-<VBox fx:id="overlayEditDataMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.jurusan.overlay.OverlayEditDataMahasiswa">
+<VBox fx:id="overlayEditDataMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.jurusan.overlay.OverlayEditMahasiswa">
     <padding>
         <Insets bottom="20.0" left="30.0" right="40.0" top="30.0" />
     </padding>
@@ -17,11 +13,11 @@
         <Label text="Nama Lengkap" />
         <TextField fx:id="editNama" />
         <Label text="NIM" />
-        <TextField fx:id="editNim" />
+        <TextField fx:id="editNim" editable="false" />
         <Label text="Jurusan" />
       <TextField fx:id="editJurusan" />
         <Label text="Prodi" />
-        <TextField fx:id="editProdi" />
+      <ChoiceBox fx:id="inputProdi" maxWidth="1.7976931348623157E308" />
         <Label text="Email" />
       <TextField fx:id="editEmail" />
       <Label text="Password" />
@@ -29,7 +25,7 @@
         <Label text="Tahun Masuk" />
         <TextField fx:id="editTahunMasuk" />
         <Label text="Foto Profile" />
-        <TextField fx:id="editFotoProfil" />
+        <TextField fx:id="editFotoProfil" disable="true" promptText="File yang dipilih" />
         <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
             <font>
                 <Font name="Reddit Sans Regular" size="12.0" />
@@ -37,7 +33,7 @@
         </Button>
         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
             <VBox.margin>
-                <Insets top="60.0" />
+                <Insets bottom="30.0" top="30.0" />
             </VBox.margin>
             <children>
                 <Button fx:id="btnEdit" alignment="CENTER" mnemonicParsing="false" onAction="#updateData" prefWidth="45.0" style="-fx-background-color: #052C65;" text="Edit" textFill="WHITE" />
